feat: package.json enable command generate

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "generate": "nuxt generate",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck"
   },
